...
                      onTap: () async {
                        image = await ImagePicker().pickImage(source: .camera);
                        setState(() {});
                      },
                    ),
                    PopupMenuItem(
                      child: Text('갤러리에서 선택'),
                      onTap: () async {
                        image = await ImagePicker().pickImage(source: .gallery);
                        setState(() {});
                      },
                    ),
                  ],
...
                    });
                  },
                  child: Row(
                    mainAxisAlignment: .center,
                    children: [
                      Text(
                        '등록하기',
                        style: TextStyle(
                          fontSize: 16,
                          color: Colors.black,
                          fontWeight: .bold,
                        ),
                      ),
...
