...
                                                    child: Text('취소'),
                                                    onPressed: () {
                                                      context.back();
                                                    },
                                                  ),
                                                  CupertinoButton(
                                                    child: Text('삭제'),
                                                    onPressed: () {
                                                      context.back();

                                                      delete(
                                                        Uri.parse(
                                                          'http://${baseUrl}/products/${e.id}',
...
