...
                                  fontWeight: .bold,
                                  fontSize: 12,
                                ),
                              ),
                            ),

                            ...['M', 'NM', 'VG+', 'VG', 'G'].map((e) {
                              final act = con.contains(e);
                              return ElevatedButton(
                                style: ElevatedButton.styleFrom(
                                  backgroundColor: act ? yellow : black2,
                                  foregroundColor: act
                                      ? Colors.black
...
          },
          child: Row(
            mainAxisSize: .min,
            spacing: 4,
            children: [
              Text(
                hide ? '펼치기' : '접기',
                style: TextStyle(
                  fontWeight: .w500,
                  fontSize: 12,
                  color: Colors.white60,
                ),
              ),
...
