...
              type: .fixed,
              unselectedItemColor: Colors.white60,
              selectedItemColor: yellow,
              items:
                  [
                        (AppIcon.home, '홈'),
                        (AppIcon.search, '탐색'),
                        (AppIcon.heart, '관심상품'),
                        (AppIcon.mypage, '마이페이지'),
                      ].indexed
                      .map(
                        (e) => BottomNavigationBarItem(
                          icon: e.$2.$1.icon(
                            color: e.$1 == value ? yellow : Colors.white60,
...
