...

        message((body['errors'] as List?)?.firstOrNull['message']);
      }, onError: (e) => message('서버 통신 오류'));
}

enum Genre {
  ROCK('ROCK', 'Rock', .rock),
  JAZZ('JAZZ', 'Jazz', .jazz),
  POP('POP', 'Pop', .pop),
  HIPHOP('HIPHOP', 'Hip-Hop', .hip),
  ELECTRONIC('ELECTRONIC', 'Electronic', .electronic),
  CLASSICAL('CLASSICAL', 'Classical', .classical),
  RNB_SOUL('RNB_SOUL', 'R&B/Soul', .rnb),
  ETC('ETC', 'Etc', .etc);
...
